# project-euler

./: .gitignore  euler-cabal-template  go-template  next-problem  search-code  starting-haskell-template
0000-library/: 0000-library.cabal  CmdLine.hs  ConversionFns.hs  Factor.hs  ListFns.hs  MathFns.hs  ParseFns.hs  StringFns.hs  go
0000-library/Haskell/: 0000-library.cabal  0000-library.hs  DateFns.hs  Factor.hs  FileFns.hs  ListFns.hs  MathFns.hs  MatrixFns.hs
0000-library/Python/: __init__.py  cmd_line.py
0001-mult-of-3-or-5/: problem-0001.hs
0002-even-fibonacci/: problem-0002.hs
0003-largest-prime-factor/: factor  factor.hs  go  problem-0003.hs  project-0003.cabal
0004-largest-palindrome/: 0004-largest-palindrome.cabal  0004-largest-palindrome.hs  go
0005-smallest-multiple/: 0005-smallest-multiple.cabal  0005-smallest-multiple.hs  go
0006-sum-square-diff/: 0006-sum-square-diff.cabal  0006-sum-square-diff.hs  go
0007-10-001st-prime/: 0007-10-001st-prime.cabal  0007-10-001st-prime.hs  go
0008-largest-product-in-series/: 0008-largest-product-in-series.cabal  0008-largest-product-in-series.hs  go
0009-special-pythagorean-triplet/: 0009-special-pythagorean-triplet.cabal  0009-special-pythagorean-triplet.hs  go
0010-sum-of-primes/: 0010-sum-of-primes.cabal  0010-sum-of-primes.hs  go
0011-largest-product-in-grid/: 0011-largest-product-in-grid.cabal  0011-largest-product-in-grid.hs  go
0012-highly-divisible-triangular-num/: 0012-highly-divisible-triangular-num.cabal  0012-highly-divisible-triangular-num.hs  go
0012-highly-divisible-triangular-number/: 0012-highly-divisible-triangular-number.cabal  0012-highly-divisible-triangular-number.hs  go
0013-large-sum/: 0013-large-sum.cabal  0013-large-sum.hs  go
0014-longest-collatz-sequence/: 0014-longest-collatz-sequence.cabal  0014-longest-collatz-sequence.hs  go
0015-lattice-paths/: 0015-lattice-paths.cabal  0015-lattice-paths.hs  go
0016-power-digit-sum/: 0016-power-digit-sum.cabal  0016-power-digit-sum.hs  go
0017-number-letter-counts/: 0017-number-letter-counts.cabal  0017-number-letter-counts.hs  go
0018-maximum-path-sum-1/: 0018-maximum-path-sum-1.cabal  0018-maximum-path-sum-1.hs  go
0018-maximum-path-sum-i/: 0018-maximum-path-sum-1.cabal  go
0019-counting-sundays/: 0019-counting-sundays.cabal  0019-counting-sundays.hs  go
0020-factorial-digit-sum/: 0020-factorial-digit-sum.cabal  0020-factorial-digit-sum.hs  go
0021-amicable-numbers/: 0021-amicable-numbers.cabal  0021-amicable-numbers.hs  go
0022-names-scores/: 0022-names-scores.cabal  0022-names-scores.hs  go
0023-non-abundant-sums/: 0023-non-abundant-sums.cabal  0023-non-abundant-sums.hs  go
0024-lexicographic-permutations/: 0024-lexicographic-permutations.cabal  0024-lexicographic-permutations.hs  go
0025-1000-digit-fibonacci-number/: 0025-1000-digit-fibonacci-number.cabal  0025-1000-digit-fibonacci-number.hs  go
0026-reciprocal-cycles/: 0026-reciprocal-cycles.cabal  0026-reciprocal-cycles.hs  go
0027-quadratic-primes/: 0027-quadratic-primes.cabal  0027-quadratic-primes.hs  go
0028-number-spiral-diagonals/: 0028-number-spiral-diagonals.cabal  0028-number-spiral-diagonals.hs  go
0029-distinct-powers/: 0029-distinct-powers.cabal  0029-distinct-powers.hs  go
0030-digit-fifth-powers/: 0030-digit-fifth-powers.cabal  0030-digit-fifth-powers.hs  go
0031-coin-sums/: 0031-coin-sums.cabal  0031-coin-sums.hs  go
0032-pandigital-products/: 0032-pandigital-products.cabal  0032-pandigital-products.hs  go
0033-digit-cancelling-fractions/: 0033-digit-cancelling-fractions.py
0034-digit-factorials/: 0034-digit-factorials.cabal  0034-digit-factorials.hs  go
0035-circular-primes/: 0035-circular-primes.cabal  0035-circular-primes.hs  go
0036-double-base-palindromes/: 0036-double-base-palindromes.cabal  0036-double-base-palindromes.hs  go
0037-truncatable-primes/: 0037-truncatable-primes.cabal  0037-truncatable-primes.hs  go
0038-pandigital-multiples/: go  pandigital_multiples_0038.py
0067-maximum-path-sum-ii/: 0067-maximum-path-sum-ii.cabal  go
templates/: euler-cabal-template  go-template  starting-haskell-template
templates/Haskell/: template.bash  template.cabal  template.hs
templates/Python/: template.bash  template.py
templates/idea-dir-template/: .name  workspace.xml
