cabal-version:          >= 2.0 && <= 2.2

name:                   euler-problem-library
version:                0.1.0.0
synopsis:               Library code to help with Euler problems.
description:            Library code to help with Euler problems.
-- homepage:              https://github.com/alkirej/.../#readm
-- bug-reports:           https://github.com/alkirej/.../issues
author:                 Jeff Alkire
maintainer:             jeff@alkire.net
copyright:              2023 Jeff Alkire
license:                BSD3
build-type:             Simple
-- extra-source-files:    CHANGELOG.md


foreign-library factor
    type:               native-shared
    hs-source-dirs:     /home/jeff/git/project-euler/0000-library
    build-depends:      base            >= 4.13    && < 5

    default-language:   Haskell2010

source-repository head
    type:               git
    location:           https://github.com/alkirej/project-euler

library
    exposed-modules:    Factor
    other-modules:     
    hs-source-dirs:     /home/jeff/git/project-euler/0000-library
    build-depends:      base            >= 4.13    && < 5

    default-language:   Haskell2010



