cabal-version:       >=1.10

name:                  euler-problem-n0004
version:               0.1.0.0
synopsis:              Code to solve the Project Euler problem #0004. 
-- description:
-- bug-reports:
license:               NONE
-- license-file:       LICENSE
author:                Jeff Alkire
maintainer:            jeff@alkire.net
-- copyright:
-- category:
build-type:            Simple
extra-source-files:    CHANGELOG.md

executable current
  main-is:             0004-largest-palindrome.hs
  other-modules:       

  default-extensions:  NumericUnderscores,
                       OverloadedStrings
  build-depends:       base            >= 4.13    && < 5

  hs-source-dirs:      /home/jeff/git/project-euler/0004-largest-palindrome
  default-language:    Haskell2010
