cabal-version:         3.6

name:                  euler-problem-n0005
version:               0.1.0.0
synopsis:              Code to solve the Project Euler problem #0005. 
-- description:
-- bug-reports:
license:               NONE
-- license-file:       LICENSE
author:                Jeff Alkire
maintainer:            jeff@alkire.net
-- copyright:
-- category:
build-type:            Simple
-- extra-source-files:    CHANGELOG.md

executable current
  main-is:             0005-smallest-multiple.hs
  other-modules:       

  default-extensions:  NumericUnderscores,
                       OverloadedStrings
  build-depends:       base            >= 4.13    && < 5,
                       combinatorial   >= 0.1.1   && < 1,
                       containers      >= 0.6.2.1 && < 1

  hs-source-dirs:      .
                       ../0000-library/Haskell
  default-language:    Haskell2010
