cabal-version:         3.6

name:                  euler-problem-n0006
version:               0.1.0.0
synopsis:              Code to solve the Project Euler problem #0006. 
-- description:
-- bug-reports:
license:               NONE
-- license-file:       LICENSE
author:                Jeff Alkire
maintainer:            jeff@alkire.net
-- copyright:
-- category:
build-type:            Simple
extra-source-files:    CHANGELOG.md

executable current
  main-is:             0006-sum-square-diff.hs
  other-modules:       

  default-extensions:  NumericUnderscores,
                       OverloadedStrings
  build-depends:       base            >= 4.13    && < 5

  hs-source-dirs:      .
  default-language:    Haskell2010
