cabal-version:         >= 2.0 && <= 2.2

name:                  euler-problem-n0007
version:               0.1.0.0
synopsis:              Code to solve the Project Euler problem #0007. 
-- description:        
-- bug-reports:
homepage:              https://github.com/alkirej/project-euler
license:               BSD3
author:                Jeff Alkire
maintainer:            jeff@alkire.net
-- copyright:
-- category:
build-type:            Simple
-- extra-source-files:   

executable problem-0007
  main-is:             0007-10-001st-prime.hs
  other-modules:       CmdLine, Factor, ListFns

  default-extensions:  NumericUnderscores,
                       OverloadedStrings
  build-depends:       base            >= 4.13    && < 5

  hs-source-dirs:      /home/jeff/git/project-euler/0007-10-001st-prime
                       /home/jeff/git/project-euler/0000-library
  default-language:    Haskell2010
