cabal-version:         3.6

name:                  euler-problem-n0030
version:               0.1.0.0
synopsis:              Code to solve the Project Euler problem #0030. 
-- description:        
-- bug-reports:
homepage:              https://github.com/alkirej/project-euler
license:               BSD-3-Clause
author:                Jeff Alkire
maintainer:            jeff@alkire.net
-- copyright:
-- category:
build-type:            Simple
-- extra-source-files:   

executable problem-0030
  main-is:             0030-digit-fifth-powers.hs
  other-modules:       CmdLine,
                       ConversionFns,
                       DateFns,
                       Factor,
                       FileFns,
                       ListFns,
                       MathFns


  default-extensions:  NumericUnderscores,
                       OverloadedStrings
  build-depends:       base            >= 4.13    && < 5.0,
                       combinatorial   >= 0.1.0.1 && < 0.2,
                       containers      >= 0.6.2.1 && < 0.7,
                       Decimal         >= 0.5.2   && < 0.6,
                       matrix          >= 0.3.6.1 && < 0.4,
                       split           >= 0.2.3.5 && < 0.3,
                       text            >= 1.2.4   && < 1.3

  hs-source-dirs:      .
                       ../0000-library/Haskell
  default-language:    Haskell2010
