cabal-version:         >= 2.0 && <= 2.2

name:                  euler-problem-n0034
version:               0.1.0.0
synopsis:              Code to solve the Project Euler problem #0034. 
-- description:        
-- bug-reports:
homepage:              https://github.com/alkirej/project-euler
license:               BSD3
author:                Jeff Alkire
maintainer:            jeff@alkire.net
-- copyright:
-- category:
build-type:            Simple
-- extra-source-files:   

executable problem-0034
  main-is:             0034-digit-factorials.hs
  other-modules:       CmdLine,
                       ConversionFns,
                       DateFns,
                       Factor,
                       FileFns,
                       ListFns,
                       MathFns


  default-extensions:  NumericUnderscores,
                       OverloadedStrings,
                       TupleSections
  build-depends:       base            >= 4.13    && < 5.0,
                       combinatorial   >= 0.1.0.1 && < 0.2,
                       containers      >= 0.6.2.1 && < 0.7,
                       Decimal         >= 0.5.2   && < 0.6,
                       matrix          >= 0.3.6.1 && < 0.4,
                       split           >= 0.2.3.5 && < 0.3,
                       text            >= 1.2.4   && < 1.3

  hs-source-dirs:      /home/jeff/git/project-euler/0034-digit-factorials
                       /home/jeff/git/project-euler/0000-library
  default-language:    Haskell2010
