cabal-version:          >= 2.0 
-- && <= 2.2

name:                   euler-problem-library
version:                0.1.0.0
synopsis:               Library code to help with Euler problems.
description:            Library code to help with Euler problems.
-- homepage:              https://github.com/alkirej/.../#readm
-- bug-reports:           https://github.com/alkirej/.../issues
author:                 Jeff Alkire
maintainer:             jeff@alkire.net
copyright:              2023 Jeff Alkire
license:                BSD3
build-type:             Simple
-- extra-source-files:    CHANGELOG.md


foreign-library factor
    type:               native-shared
    hs-source-dirs:     /home/jeff/git/project-euler/0000-library
    build-depends:      base            >= 4.13    && < 5

    default-language:   Haskell2010

source-repository head
    type:               git
    location:           https://github.com/alkirej/project-euler

library
    exposed-modules:    CmdLine,
                        ConversionFns,
                        DateFns,
                        Factor,
                        FileFns,
                        ListFns,
                        MathFns,
                        StringFns
    other-modules:     
    hs-source-dirs:     /home/jeff/git/project-euler/0000-library/Haskell
    build-depends:      base            >= 4.13    && < 5,
                        combinatorial   >= 0.1.0.1 && < 1,
                        containers      >= 0.6.2.1 && < 1,
                        split           >= 0.2.3.4 && < 1,
                        text            >= 1.2.4.0 && < 2

    default-language:   Haskell2010



